# sideload

./: .gitignore  README.md  meson.build
.github/workflows/: gettext.yml  githubci.yml  release.yml
data/: colors.css  deb_helper.sh  io.elementary.sideload.policy  meson.build  sideload.appdata.xml.in  sideload.desktop.in  sideload.gresource.xml  sideload.gschema.xml  sideload.metainfo.xml.in
debian/: changelog  control  copyright
meson/: post_install.py
po/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
src/: AddRepoWindow.vala  Application.vala  BundleWindow.vala  DebFile.vala  FlatpakBundleFile.vala  FlatpakFile.vala  FlatpakRefFile.vala  FlatpakRepoFile.vala  InstallRefWindow.vala  MainWindow.vala  PackageFile.vala  PackageFlatpakFile.vala  RefWindow.vala
src/Dialogs/: InstallFailDialog.vala
src/Views/: AbstractView.vala  AddRepoView.vala  BundleView.vala  ErrorView.vala  MainView.vala  ProgressView.vala  RefView.vala  SuccessView.vala
vapi/: flatpak.vapi
